--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,6 @@
-
+.holder{
+	display: grid;
+	grid-template-columns: repeat(2,auto);
+	grid-template-rows: repeat(2,auto);
+}
 /* Your CSS Code here. */
